fix nav button alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ nav {
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: 1.25rem;
+    right: 2rem;
 }
 nav ul {
     display: none;
